<resources>
    <string name="app_name">Spendee</string>
    <string name="current_balance">Current balance</string>
    <string name="set_balance">Set balance</string>
    <string name="latest_expenses">Latest expenses</string>
    <string name="show_more">show more</string>
    <string name="your_expenses">Your expenses</string>
    <string name="add_expense">Add expense</string>
    <string name="you_can_spend">You can spend</string>
    <string name="spent">Spent</string>
    <string name="set_budget">Set budget</string>
    <string name="add_a_new_goal">Add a new goal</string>
    <string name="your_financial_goals">Your financial goals</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="entertainment">Entertainment</string>
    <string name="payments">Payments</string>
    <string name="transport">Transport</string>
    <string name="personal">Personal</string>
    <string name="house">House</string>
    <string name="everyday">Everyday</string>
    <string name="health">Health</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="your_expense">Your expense</string>
    <string name="select_a_category">Select a category</string>
    <string name="you_have_no_budget_set">You have no budget set</string>
    <string name="you_have_no_goals_set">You have no goals set</string>
    <string name="add_a_financial_goal">Add a financial goal</string>
    <string name="your_budget">Your budget</string>
    <string name="enter_budget_amount">Enter budget amount</string>
    <string name="select_a_start_date">Select a start date</string>
    <string name="select_an_end_date">Select an end date</string>
    <string name="notify_me_when_i_exceed_my_budget">Notify me when I exceed my budget</string>
    <string name="your_goal">Your goal</string>
    <string name="target_amount">Target amount</string>
    <string name="set_a_deadline">Set a deadline</string>
    <string name="notify_me_when_i_reach_my_goal">Notify me when I reach my goal</string>
    <string name="expenses">Expenses</string>
    <string name="budget">Budget</string>
    <string name="goals">Goals</string>
    <string name="home">Home</string>
    <string name="balance">Balance</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_expenses_yet">No expenses yet</string>
    <string name="update_budget">Update budget</string>
    <string name="goal_image">Goal Image</string>
    <string name="deadline">Deadline</string>
    <string name="target">Target: %1$s$</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="more_options">More options</string>
    <string name="select_a_starting_day_of_the_month">Select a starting day of the month</string>
    <string name="amount_cant_be_empty">Amount can\'t be empty!</string>
    <string name="please_select_a_starting_day">Please select a starting day!</string>
...
